# Hoshiko

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.toml  example.config.json  main.py  pyproject.toml
apis/: __init__.py  _session.py  anilist.py  mal.py
bot/: __init__.py  hoshiko.py
bot/cogs/: __init__.py  anime.py  errors.py  manga.py
bot/extensions/: __init__.py  anime.py  errors.py  manga.py
core/: cache.py  config.py  constants.py  errors.py
core/models/: __init__.py  anime.py  base_model.py  base_models.py  enums.py  manga.py
core/services/: __init__.py  abc.py  anime.py  manga.py
core/structs/: __init__.py  anime.py  base_struct.py  enums.py  manga.py
core/utils/: __init__.py  logging.py  urls.py  validation.py
