[project]
name = "hoshiko"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cachetools>=6.2.0",
    "discord>=2.3.2",
    "jikanpy-v4>=1.0.2",
    "jishaku>=2.6.0",
    "niquests>=3.15.2",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.1.0",
]
