[project]
name = "hoshiko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=6.2.0",
    "discord>=2.3.2",
    "jishaku>=2.6.0",
    "msgspec>=0.19.0",
    "niquests>=3.15.2",
    "rapidfuzz>=3.14.1",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 100
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A002",
    "ASYNC240", # I don't like trio/anyio
    "C90", # Lol
    "COM812", # ruff format suggested
    "CPY001", # I hate this
    "D" # Temporary ignore until 0.2, it would be annoying to document everything now
]
unfixable = [
    "E501",  # Line length handled in other ways by ruff format
    "ERA",  # Don't delete commented out code
]

[tool.ruff.lint.per-file-ignores]
"bot/**.py" = ["INP001"] # Annoying, but I may change it later
"__init__.py" = ["F401"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
line-ending = "lf"
